# cemi

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.txt  NOTICE.txt  PRD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  publish-pypi.yml
backend/: README.md  __init__.py  auth.py  ingestion.py  main.py  metrics_stream.py  requirements.txt  routes.py  schema.sql  store.py
cli/: README.md  pyproject.toml
cli/cemi/: __init__.py  api.py  auth.py  cli.py  config.py  contract.md  contract.py  decision_layer.py  defaults.py  local_server.py  writer.py
cli/cemi/examples/: __init__.py  contract_asr_server_sla.json  contract_v0.json  test_writer.py
cli/cemi/workspace_dist/: index.html
cli/cemi/workspace_dist/assets/: index-APOCwJvs.js  index-S1cVBpyp.css
cli/scripts/: package_smoke.py
cli/tests/: test_local_gateway_smoke.py  test_multi_model_benchmark.py  test_multi_model_gateway_e2e.py  test_retroactive_save_dir.py  test_single_model_train_eval.py  test_writer_contract.py
demos/: AlexNet_PTQ_demo.ipynb  CNN-MNIST_demo.ipynb  MobileNet_CIFAR10_Writer_Showcase.ipynb
docs/: oss-boundary.md
docs/adr/: 0001-verify-command.md
scripts/: build_cli_package.py  decision_demo.py  main.py  model_ptq_onnxrt_demo.py  sync-workspace-dist.sh  test.py  train.py
src/: App.tsx  index.css  mockData.js  mockRunsData.js  theme.ts  vite-env.d.ts
src/api/: client.ts  health.ts  mockClient.ts
src/config/: msalConfig.ts
src/contexts/: AuthContext.tsx  WorkspaceThemeContext.tsx
src/hooks/: useMetricsStream.ts
(+108 files in other folders)
