[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cemi"
version = "0.1.1"
description = "CEMI CLI — local gateway, workspace, and run tracking for the closed beta"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "msal>=1.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cemi = "cemi.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cemi = ["workspace_dist/**/*"]
